--- a/additional_content/infobox_project.MULTILINGUAL.html
+++ b/additional_content/infobox_project.MULTILINGUAL.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+@en <html lang="en">
+@es <html lang="es">
 <head></head>
 
 <body>
 
 <i class="_modal_popup-close fa fa-times"></i>
-<h2 class="w3-centered"> How to show your impressive portfolio?</h2>
+<h2 class="w3-centered">
+@en  How to show your impressive portfolio?
+@es  ¿Cómo podrías mostrar tu increible porfolio?
+</h2>
 <p>
-    Of course with <a href="https://github.com/MarcosBernal/infobox_matrix">infobox_matrix</a>!!
+@en    Of course with
+@es    Pues, por supuesto, con
+    <a href="https://github.com/MarcosBernal/infobox_matrix">infobox_matrix</a>!!
     <br /><br />
-    Well maybe not, however, this project was created because I needed some of its features, and in
-    the meantime, I refreshed my old JQuery/CSS knowledge. It is inspired by the
+@en    Well maybe not, however, this project was created because I needed some of its features, and in
+@en    the meantime, I refreshed my old JQuery/CSS knowledge. It is inspired by the
+@es    Bueno quizás no, sin embargo, este proyecto fue creado porque necesitaba varias funcionalidades que no
+@es    encontré en internet y, además, me sirvió para desoxidar un poco mi conocimiento de JQuery y CSS. Tomé como referencia
     <a href="https://www.w3schools.com/w3css/w3css_modal.asp">
-      w3-modal of the w3.css framework
+@en      w3-modal of the w3.css framework
+@es      w3-modal del framework w3.css
     </a>
-    with some customization. Although at the very beginning I did not know about this particular feature.
+@en    with some customization. Although at the very beginning I did not know about this particular feature.
+@es    con alguna personalización y cambios varios. Aunque al principio no conocía w3-modal.
 </p>
-<img src="imgs/infobox_matrix_example.jpg" alt="Example of Portfolio(mine) used infobox_matrix"/>
+<img src="imgs/infobox_matrix_example.jpg" alt="
+@en Example of Portfolio(mine) used infobox_matrix
+@es Ejemplo de portfolio(mio) usado en infobox_matrix
+"/>
 <p>
-    I have built this website not from scratch because I have used some libraries and frameworks but I have put some effort to develop it.
-    Part of the development has been the <a href="https://github.com/MarcosBernal/infobox_matrix">infobox_matrix repo</a>,
-    which I also use for
+@en    I have built this website not from scratch because I have used some libraries and frameworks
+@en    but I have put some effort to develop it. Part of the development has been the
+@es    No he construido esta web desde cero, puesto que he usado varias librerías y frameworks pero he puesto bastante esfuerzo en ella.
+@es    Parte del desarrollo ha sido el repositorio
+    <a href="https://github.com/MarcosBernal/infobox_matrix">infobox_matrix</a>,
+@en    repo which I also use for
+@es    el cuál también uso para
     <a href="http://www.marcosbernal.es">
-      my portfolio
+@en      my portfolio
+@es      mi portfolio
     </a>
-    , as you can see above.
+@en    , as you can see above.
+@es    , como puedes ver más arriba.
     <br /><br />
-    Even though the repository is now in an early stage of development with just a few features, it is completely functional...
-    and I will continue with the development little by little.
+@en    Even though the repository is now in an early stage of development,
+@en    it is completely functional... and I will continue with the development little by little.
+@es    Aunque este repositorio esta todavía en desarrollo, es completamente funcional...
+@es    y seguiré desarrollándolo poco a poco
+
 </p>
-<img src="imgs/in_construction.jpg" alt="Sign with a label that contains under construction check back soon"/>
+<img src="imgs/in_construction.jpg" alt="
+@en Sign with a label that contains under construction check back soon
+@es Señal con la etiqueta de 'en construcción, vuelva más tarde'
+"/>
 
 </body>
 
