--- a/additional_content/openhacknice.MULTILINGUAL.html
+++ b/additional_content/openhacknice.MULTILINGUAL.html
@@ -1,79 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+@en <html lang="en">
+@es <html lang="es">
 <head></head>
 
 <body>
 
 <i class="_modal_popup-close fa fa-times"></i>
-<h2 class="w3-centered"> My first hackathon!</h2>
+<h2 class="w3-centered">
+@en  My first hackathon!
+@es  ¡Mi primer hackaton!
+</h2>
 <p>
-    It was around May 2017. I was in the University of Nice Sophia-Antipolis(UNS) doing my first year of the master.
-   The midterm exams were looking at all students suspiciously as if they were judges of our movements outside the school.
+@en    It was around May 2017. I was in the University of Nice Sophia-Antipolis(UNS) doing my first year of the master.
+@en    The midterm exams were looking at all students suspiciously as if they were judges of our movements outside the school.
+@es    Mayo de 2017, estaba en la universidad de Niza Sophia-Antipolis(UNS) haciendo mi primer año del master.
+@es    Lo exámenes parciales nos observaban atentamente, juzgando los movimientos y actividades que realizabamos fuera de la uni.
 </p>
 
 <p>
-    I heard about a
+@en    I heard about a
+@es    Escuché sobre una
     <a href="https://projects.tmforum.org/wiki/display/API/Open+Hack+TM+Forum+Live+Nice+2017">
-      Open API competition, called OpenHack
+@en      Open API competition called OpenHack
+@es      competición de APIs llamada OpenHack
     </a>,
-    held by TMForum and hosted in the city center of Nice. The Open API competition was about developing a solution using any
-    API offered by different sponsors like Salesforce, Vodafone, Huawei, City of Nice and the own TMForum.
+@en    held by TMForum and hosted in the city center of Nice. The Open API competition was about developing a solution using any
+@en    APIs (Application Protocol Interface) offered by different sponsors like Salesforce, Vodafone, Huawei, City of Nice and the own TMForum.
+@es    organizada por TMForum y celebrada en el centro de Niza. La competición trataba sobre el desarrollo software mediante el uso
+@es    de APIs (Interfaz de Protocolo de Aplicación en inglés) de compañías como Salesforce, Vodafone, Huawei, la ciudad de Niza o TMForum.
     <br />
-    At that time, I was tired of studying and I decided to go there by my own. There were advertised six prizes for
-    the winners and finalists of the event, however I preferred to focus on meet new people and learn new things.
+@en    At that time, I was tired of studying and I decided to go there. There were advertised six prizes for
+@en    the winners and finalists of the event, however I preferred to focus on meet new people and learn new things (and forget about the exams).
+@es    En ese momento, estaba cansado de estudiar y decidí ir allí. Había varios premios para los ganadores y finalistas del evento,
+@es    sin embargo preferí centrarme en conocer gente y aprender nuevas cosas (y olvidarme de los exámenes).
 </p>
-<img src="imgs/openhack/openhack_event.jpg"/>
+<img src="imgs/openhack/openhack_event.jpg" alt="
+@en participants looking at the pitch stage in the end of the event
+@es participantes mirando al estrado del pitch al final del evento
+"/>
 
 <p>
-    Once inside the Acropolis Convention of Nice, I ran into more people that I expected. I did not know anyone previously, so
-    I started to ask randomly different groups and individuals to join them, eventually I met another Spaniard and we set up
-    a team with other 3 people. We created an exciting team, which was called RHIME due our given name initials.
-    (Ronan, Hugo, Ignacio, Marcos and Eman)
+@en    Once inside the Acropolis Convention of Nice, I ran into more people that I expected. I did not know anyone previously, so
+@en    I started to ask randomly different groups and individuals to join them, eventually I met another Spaniard and we set up
+@en    a team with other 3 people. Each of us had a different profile and we built up an exciting team, which was called RHIME due
+@en    our given name initials (Ronan, Hugo, Ignacio, Marcos and Eman).
+@es    Una vez dentro del Acrópolis de Niza, me encontré con más gente de la que esperaba. No conocía a nadia previamente, así que empecé
+@es    a preguntar aleatoriamente a diferentes grupos e individuos para unirme a ellos. Eventualmente, conocí a otro español y nos juntamos
+@es    con otras tres personas. Cada uno tenía un perfil distinto y logramos formar un grupo interesante al cual llamamos RHIME, en base a
+@es    nuestras iniciales (Ronan, Hugo, Ignacio, Marcos and Eman).
 </p>
 
-<img src="imgs/openhack/team_working.jpg"/>
+<img src="imgs/openhack/team_working.jpg" alt="
+@en RHIME doing team work
+@es RHIME trabajando en equipo
+"/>
 
 <p>
-    We were learning which APIs we can used to build our solution and how to use the Salesforce platform to connect the
-    different providers. Moreover, we discovered tools such as
+@en    We were learning which APIs we can used to build our solution and how to use the Salesforce platform to connect the
+@en    different providers. Moreover, we discovered tools such as
+@es    Estuvimos aprendiendo que APIs podíamos usar para construir nuestra solución y como utilizar la plataforma de Salesforce
+@es    para conectar a los distintos proveedores.
     <a href="https://www.getpostman.com/">Postman</a>
-    or
+@en    or
+@es    o
     <a href="https://www.electricimp.com/">electric imp</a>.
-    In a couple of hours, we started to work like a good connected team. Since the very beginning we decided our core idea,
-    goals and different features that our demo should contain. We even worked with a business canvas!!
+@en    In a couple of hours, we started to work like a cohesive team. Since the very beginning we decided our core idea,
+@en    goals and different features that our demo should contain. We even worked with a business canvas!!
+@es    En un par de horas, empezamos a trabajar como un equipo completamente cohesionado. Desde el principio decidimos la idea principal,
+@es    objetivos y funcionalidades que la demo debería tener. ¡Incluso trabajamos con un business canvas!
     <br /><br />
-    With the motivation and clear objectives it was just a matter of time to build a successful demo.
+@en    With the motivation and clear objectives it was just a matter of time to build a successful demo.
+@es    Con la motivación y los objetivos claros era cuestión de tiempo que produciésemos una demo excelente.
 </p>
 
 <p>
-    The idea we worked on was about addressing city issue management with the gamificated assistance of citizens. The platform
-    was connected with the users by any social network, in our cased we used twitter. We decided to use the IoT and ticket
-    handling of Salesforce, with Huawei and Vodafone APIs to manage the drones and the user accounts. In addition, we added in
-    the demo an integration with google cloud AI to pre-analyse the images received from the drone (setting the priority and
-    some labels related to the case i.e. fire or massive flooding).
+@en    The idea we worked on was about addressing city issue management with the gamificated assistance of citizens. The platform
+@en    was connected with the users by any social network, in our cased we used twitter. We decided to use the IoT and ticket
+@en    handling of Salesforce, with Huawei and Vodafone APIs to manage the drones and the user accounts. In addition, we added in
+@en    the demo an integration with google cloud AI to pre-analyse the images received from the drone (setting the priority and
+@en    some labels related to the case i.e. fire or massive flooding).
+@es    La idea en la que trabajamos fue acerca de solucionar problemas en zonas urbanas mediante la ayuda gamificada de los ciudadanos.
+@es    La plataforma estaba conectada con los usuarios mediante una red social, en nuestra demo usamos twitter. Respecto a las APIs,
+@es    decidimos usar IoT y control de tickets de Salesforce junto con las API de Huawei y vodafone para el control de drones y cuentas de
+@es    usuario. Además añadimos una integración con la IA de google cloud para pre-analizar las imágenes recibidas por el dron
+@es    (estableciendo la prioridad y contexto del problema abierto previamente por el ciudadano)
     <br /><br />
-    On the morning of 16th May we prepared a pitch and some hours later we pitched in front of the jury, rest of the
-    participants and other visitors that decided to see the final results. There were good ideas and demos. For instance
-    there was a system that used drones to control pollution in ports, a system made by local students to pay by using sim
-    or a system that managed the water use in green places with a tensorflow neural network.
+@en    On the morning of 16th May we prepared a pitch and some hours later we pitched in front of the jury, rest of the
+@en    participants and other visitors that decided to see the final results. There were good ideas and demos. For instance
+@en    there was a system that used drones to control pollution in ports, a system made by local students to pay by using sim
+@en    or a system that managed the water use in green places with a tensorflow neural network.
+@es    Durante la mañana del 16 de mayo preparamos una presentación y varias horas más tarde lo defendimos en frente del jurado, el resto
+@es    de los participantes, y otros visitantes que decidieron ver la fase final. Hubieron ideas y demos muy interesantes. Por ejemplo,
+@es    había la gestión de drones a través de un sistema que controlaba la contaminación en puertos, un sistema para pagar con el móvil a través de
+@es    la sim o una plataforma que controlaba la gestión del agua en zonas verdes con una red neuronal.
     <br /><br />
-    A few hours later, after the jury discussion, they considered that we created a very successful demo and they awarded us with
-    three out of six prizes. Including
+@en    After the jury deliberation, they considered that we created a very successful demo and they awarded us with
+@en    three out of six prizes. Including
+@es    Trás el debate del jurado, se determinó que habíamos creado una solución muy interesante y nos premiaron con
+@es    tres premios de los 6 que había. Incluyendo
     <a href="https://www.tmforumlive.org/open-hack-nice/">
-      2nd place
+@en      2nd place
+@es      2do lugar
     </a>,
     <a href="https://twitter.com/Abhi_Sur/status/864811449696124928">
-      Salesforce special award
+@en      Salesforce special award
+@es      premio especial de Salesforce
     </a>
-    and Huawei special award (invitation to HCE in Berlin).
+@en    and Huawei special award (invitation to HCE in Berlin).
+@es    y premio especial de Huawei (invitación al HCE en Berlin)
     <br /><br />
-    Honestly, I enjoyed very much the event so far but receiving the awards was really amazing.
+@en    Honestly, I enjoyed very much the event so far but receiving the awards was really amazing.
+@es    Honestamente, me lo pase muy bien durante el evento pero recibir 3 premios... fue realmente increible!
 </p>
 
 <img src="imgs/openhack/team_and_award.jpg"/>
 
 <p>
-    After a couple of weeks, the organizer asked to upload a video of our demo, showing its features. The video is attached below.
+@en    After a couple of weeks, the organizer asked to upload a video of our demo, showing its features. The video is attached below.
+@es    Después de unas semanas, la organizadora nos pidió subir un vídeo de nuestra demo, mostrando sus funcionalidades. El vídeo se puede ver más abajo.
 </p>
 
 <iframe src="https://player.vimeo.com/video/221308594" width="640" height="360" frameborder="0"
