--- a/additional_content/personal_server.MULTILINGUAL.html
+++ b/additional_content/personal_server.MULTILINGUAL.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+@en <html lang="en">
+@es <html lang="es">
 <head></head>
 
 <body>
 
 <i class="_modal_popup-close fa fa-times"></i>
-<h2 class="w3-centered"> One server to rule them all!!</h2>
+<h2 class="w3-centered">
+@en    One server to rule them all!!
+@es    ¡¡Un servidor para governarlos a todos!!
+</h2>
 <p>
-    Right now it is a project on DEVELOPMENT but stay tuned I will update little by little!!
+@en    Right now it is a project on DEVELOPMENT but stay tuned I will update little by little!!
+@es    Ahora mismo el proyecto está en DESARROLLO pero estate atento que lo actualizaré poco a poco!!
 </p>
 <img src="imgs/personal_server/my_raspberry_pi.jpg"/>
 <p>
-    We live in a really good period, at least, for tech lovers. We have access to many services and resources
-    that not so long ago were not even thought about.
+@en    We live in a really good period, at least, for tech lovers. We have access to many services and resources
+@en    that not so long ago were not even thought about.
+@es    Vivimos en un buen momento, al menos, para los amantes de la tecnología. Tenemos acceso a muchos servicios y
+@es    recursos que hace mucho tiempo eran inimaginables.
     <br><br>
-    Since I was a child, I have been curious about servers although they seem to be very complex for ordinary people.
-    However, I have decided to set my own server with many features, such as multimedia and remote services.
+@en Since I was a child, I have been curious about servers although they seem to be very complex for ordinary people like me.
+@en However, I have decided to set my own server with many features, such as multimedia and remote services.
+@es Desde que era un crío, Siempre había estado intrigado sobre los servidores aunque parecían muy complicados para gente corriente como yo.
+@es Sin embargo, he decidido poner en marcha mi propio servidor con funcionalidades tales como multimedia y servicios de conexion remota.
     <br><br>
-    Whereas many of the services of my future server are already implemented like owncloud, I would like to prepare a
-    remote environment for tensorflow with cuda.
+@en Whereas many of the services of my future server are already implemented like owncloud, it has to be set up and sometimes there are not
+@en some features that one would like to have.
+@es Mientras muchos servicios de mi futuro servidor ya están implementados en soluciones como owncloud, hay que ponerlos a punto y desarrollar
+@es funcionalidades que me gustaría tener y que en algunos casos no tienen.
 
-    In construction & development...
+@en    In construction & development...
+@es    En construcción & desarrollo...
 </p>
 <img src="imgs/in_construction.jpg" alt="Sign with a label that contains under construction check back soon"/>
 
