--- a/additional_content/summerschoolmunich.MULTILINGUAL.html
+++ b/additional_content/summerschoolmunich.MULTILINGUAL.html
@@ -1,75 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+@en <html lang="en">
+@es <html lang="es">
+
 <head></head>
 
 <body>
 
 <i class="_modal_popup-close fa fa-times"></i>
 <h2 class="w3-centered">
-  Decentralizing the production in Munich!
+@en  Decentralizing the production in Munich!
+@es  ¡Descentralizando la producción en Munich!
 </h2>
 <p>
-    In the summer of 2017, I was attending the summer school in TUM (Technische Universität München).
-    The topic was about decentralizing production which in my case was related to 3D Printing or, as the expert refer to it,
+@en    In the summer of 2017, I was attending the summer school in TUM (Technische Universität München).
+@en    The topic was about decentralizing production which in my case was related to 3D Printing or, as the expert refer to it,
+@es    Verano de 2017, había decidido ir al summer school de TUM (Technische Universität München).
+@es    El tema del summer school era producción descentralizada que en mi caso estuvo relacionado con impresión 3D o,
+@es    como lo llaman los expertos,
     <a href="https://www.eos.info/additive_manufacturing">
-      additive manufacturing
+@en      additive manufacturing
+@es      fabricación aditiva
     </a>.
 </p>
-<img src="imgs/summer_school/everyone_front_tum.jpg"/>
+<img src="imgs/summer_school/everyone_front_tum.jpg" alt="
+@en  All participants in front of school building
+@es  Todos los participates en frente del edificio de la escuela
+"/>
 <p>
-    It was two intensive weeks where I learned many things and I met a lot of interesting people.
-    We were 35 students, and we were split into groups of 4 and one group of 3. The summer school was oriented to use
+@en    It was two intensive weeks where I learned many things and I met a lot of interesting people.
+@en    We were 35 students, and we were split into groups of 4 to deal with different use cases. The summer school was oriented to use
+@es    Fueron dos semanas intensas donde aprendí muchas cosas y conocí a gente muy interesante. Fuimos 35 estudiantes
+@es    de todas las partes del mundo, y fuimos separados en grupos de 4 para trabajar en diferentes escenarios de uso. El summer school
+@es    estuvo orientado al uso de
     <a href="https://leanservicecreation.com/">
       lean service creation
     </a>
-     mentored by
+@en     mentored by
+@es     mentorizado por
      <a href="">Futurice</a>,
-    and honestly, they inspired really well the methodology of lean service creation,
-    which at first glance might seem to be just fulfilling canvases without a purpose.
+@en    and honestly, they inspired really well the methodology of lean service creation,
+@en    which at first glance might seem to be just fulfilling canvases without a purpose.
+@es    que honestamente, inspiraron muy bien el uso y aplicación de la metodología de lean service creatión,
+@es    el cual podría aparentar que sólo es rellenar un conjunto de esquemas sin propósito.
 </p>
-<img src="imgs/summer_school/nimbus_canvas.jpg"/>
+<img src="imgs/summer_school/nimbus_canvas.jpg"alt="
+@en  Group of canvases that we use in our case of EOS
+@es  Grupo de canvases que usamos para nuestro caso de EOS
+"/>
 <p>
-    Our case, presented by EOS, was about understanding the environment of addictive manufacturing and propose
-    a solution with a business plan and pitch the presentation in front the EOS, other companies and the rest of
-    the group. During the two weeks was time for everything besides hard working. I visited the city center and
+@en    Our case, presented by EOS, was about understanding the environment of addictive manufacturing and propose
+@en    a solution with a business plan and pitch the presentation in front the EOS, other companies and the rest of
+@en    the group. During the two weeks was time for everything besides hard working. I visited the city center and the
+@es    Nuestro caso, presentado por EOS, trataba de entender el entorno de la producción aditiva y proponer una solución realista
+@es    y justificada con un plan de negocios y una defensa del mismo en frente de EOS, otras compañías y el resto de los grupos.
+@es    Durante las dos semanas estuvimos trabajando duro todos los días, aunque también hubo tiempo para otras actividades.
+@es    En mi tiempo libre visité el centro de la ciudad y el
     <a href="http://www.deutsches-museum.de/en/collections/">Deutsches Museum</a>
-    , which contains material of
-    many fields but if you look for something specific as I was, one could not get satisfied.
+@en    , which contains material of all or almost all science fields but if you look for something specific and deep you could not get satisfied.
+@es    , el cual contiene exposiciones sobre todos o casi todos los campos de la ciencia aunque si buscas algo especificamente
+@es    y en detalle puedes no quedarte satisfecho ya que es una visión a alto nivel de la mayoria de los campos.
     <br /><br />
-    Perhaps the most exciting activity was to build a raft and, afterwards, make a rafting race in the Spitzingsee lake.
+@en    Perhaps the most exciting social activity was to build a raft and, afterwards, make a rafting race in the Spitzingsee lake.
+@es    Quizás la actividad social más interesante del summer school fue construir una barca y luego hacer una carrera con ella
+@es    en el lago Spitzingsee al sur de Munich.
 </p>
 
-<img src="imgs/summer_school/team_work.jpg"/>
+<img src="imgs/summer_school/team_work.jpg" alt="
+@en  Zohaib and I working in our group use case
+@es  Zohaib y yo trabajando en nuestro caso de uso
+"/>
+
 <p>
-    Our day to day was to going forward with a concept or more specifically to create a solution. We create an account for
+@en    Our day to day was to going forward with a concept or more specifically to create a solution. We create an account for
+@es    Nuestro día a día consistía en avanzar y dar forma a un concepto/solución ubicado en el contexto que nos dío EOS. Creamos una cuenta para
     <a href="https://twitter.com/EOS_nimbus/status/894848203039944704">
-      occasional feed
+@en      occasional feed
+@es      informar ocasionalmente
     </a>.
     <br /><br />
-    We performed several interviews with different players, such as Wärtsilä, Mercuris, Shapeways, and 3DBear as well as
-    educational institutions like AAlto University or some executives and workers of EOS. Almost at the end of the week,
-    we have defined our context, problem and started We prepare a storytelling video that, with the impressive skills
-    of my teammates, turned to be very nice.
+@en    We performed several interviews with different players, such as Wärtsilä, Mercuris, Shapeways, and 3DBear as well as
+@en    educational institutions like AAlto University or some executives of EOS. Almost at the end of the week,
+@en    we have defined our context, problem and solution. We prepared a storytelling video that, with the impressive skills
+@en    of my teammates, turned to be very nice.
+@es    Realizamos varias entrevistas con muchas compañias como  Wärtsilä, Mercuris, Shapeways, y 3DBear así como a
+@es    instituciones educativas como la universidad de AAlto University o algunos ejecutivos de EOS. Al final de la semana, ya teniamos
+@es    definido nuestro contexto, problema, y solución. Empezamos a preparar una historia que, con las increibles habilidades de mis compañeros,
+@es    quedo en forma de un video fantástico.
+
 </p>
 <iframe src="https://player.vimeo.com/video/228589757" width="640" height="360" frameborder="0"
   webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 <p>
-    The last two days we were working on the pitch, most of the work was done, but then the work had to be
-    presented properly. As one of the most intelligent minds said, we prepare the
+@en    The last two days we were working on the pitch because, event though most of the work was done the work, it had to be
+@en    presented properly. As one of the most intelligent minds said once, we prepare the
+@es    Los últimos dos días estuvimos trabajando en la defensa porque, aunque casi todo el trabajo estaba hecho, había que
+@es    presentarlo correctamente. Como una de las mentes más brillantes dijo una vez, preparamos una
     <a href="https://docs.google.com/presentation/d/1P8Ckiu7l64dJQIIBrj7u9c7JwYHPEnrugejz4RCK2Vo/edit?usp=sharing">
-      slides
+@en      slides
+@es      presentación
     </a>
-    as simple as possible but not simpler. And in the midday of 11th August, we pitched.
+@en    as simple as possible but not simpler. And in the midday of 11th August, we pitched.
+@es    tan sencilla como nos fue posible pero no más simple. Y en el mediodía del 11 de Agosto, presentamos nuestra idea.
 </p>
-<img src="imgs/summer_school/eos_nimbus_presentation.jpg"/>
+<img src="imgs/summer_school/eos_nimbus_presentation.jpg" alt="
+@en  Marcos talking in the pitch of EOS Nimbus
+@es  Marcos hablando en la defensa de EOS Nimbus
+"/>
 <p>
-    We were congratulated by EOS for the hard work done and were told that they annotated many ideas and suggestions.
-    Who knows, maybe we will see in the future a solution of EOS very close to our proposal.
+@en    We were congratulated by EOS for the hard work done and were told that they annotated many ideas and suggestions.
+@en    Who knows, maybe we will see in the future a solution of EOS very close to our proposal.
+@es    Fuimos felicitados por EOS por el trabajo duro que realizamos y nos dijeron que anotaron muchas ideas y sugerencias que salieron en la defensa.
+@es    Quién sabe, quizás en el futuro vemos un servicio de EOS muy cercano al que propusimos.
 </p>
-<img src="imgs/summer_school/team_photo_finish.jpg"/>
+<img src="imgs/summer_school/team_photo_finish.jpg" alt="
+@en  Last picture of the group after the pitch with the coordinators
+@es  Última foto del grupo después de la defensa con los coordinadores
+"/>
 <p>
-    All in all, I met people not only from Europe but also from all parts of the world. Their personality and philosophy of
-    life gave me new insights that made me consider many things.
+@en    All in all, I met people not only from Europe but also from all parts of the world. Their personality and philosophy of
+@en    life gave me new insights that made me grow up in several ways.
+@es    En resumen, conocí a gente no sólo de Europa sino de todas partes del mundo. Su personalidad y forma de vida me dió mucho que pensar
+@es    y me hizo crecer como persona de muchas formas.
 </p>
 
 </body>
