--- a/additional_content/tadhackmadrid.MULTILINGUAL.html
+++ b/additional_content/tadhackmadrid.MULTILINGUAL.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+@en <html lang="en">
+@es <html lang="es">
+
 <head></head>
 
 <body>
 
 <i class="_modal_popup-close fa fa-times"></i>
-<h2 class="w3-centered"> Time to learn about telco APIs!</h2>
+<h2 class="w3-centered">
+@en Time to learn about telco APIs!
+@es ¡Hora de aprender acerca de APIs para telcos!
+</h2>
 <p>
-    It seems to be that every year in Madrid, there is a hackathon called
+@en    It seems to be that every year in Madrid there is a hackathon called
+@es    Parece que cada año en Madrid hay un hackaton llamado
     <a href="https://tadhack.com/2017/global/tadhack-madrid/">TADHack</a>.
-    The name TADHack comes from Telecom Application Development Hackathon. And, as you have guessed,
-    it is focused on telecommunications with the use of the APIs of the sponsors.
+@en    The name TADHack comes from Telecom Application Development Hackathon. And, as you have guessed,
+@en    it is focused on telecommunications with the use of the APIs of the sponsors.
+@es    El nombre TADHack viene del acrónimo en inglés Hackaton Desarrollo de Aplicaciones de Telecomunicación.
+@es    Y por lo tanto, está centrado en el uso de API ofrecidas por distintas empresas de telecomunicaciones.
     <br /><br />
-    The event was sponsored by different telecoms such as APIFONICA, Temasys or TelesTax and hosted in the Telecommunication
-    School of UPM, ETSIT. It lasted less than 2 days, actually, it was about 28 hours of potential work since the event started
-    at 10:00 am and finished at 2:00 pm on the following day.
+@en    The event was sponsored by different telecoms such as APIFONICA, Temasys or TelesTax and hosted in the Telecommunication
+@en    School of UPM, ETSIT. It lasted less than 2 days, actually, it was about 28 hours of potential work since the event started
+@en    at 10:00 am and finished at 2:00 pm on the following day.
+@es    El evento fue patrocinado por distintas compañías tales como APIFONICA, Temasys o Telestax y fue organizado en la escuela de
+@es    telecomunicaciones de la UPM, ETSIT. El hackaton duro algo menos de dos días, de hecho, fueron unas 28 horas de trabajo potencial
+@es    pues el evento empezo a las 10 de la mañana y acabo a las 2 del mediodía del dia siguiente.
 </p>
-<img width="480" height="320" src="imgs/tadhackmadrid/team_work.jpg" alt="Working as a team in the TADHack, with Guliz and Santiago" />
+<img width="480" height="320" src="imgs/tadhackmadrid/team_work.jpg" alt="
+@en Working as a team in the TADHack, with Guliz and Santiago
+@es Trabajando en equipo con Guliz y Santiago
+" />
 
 <p>
-    The idea we worked on was assisting people by sending the last stored location to their trustee contacts when an emergency or disaster happens.
-    We made use of a LAMP server, developed some php code and run the code in a virtual box of the server of Santiago.
+@en    The idea we worked on was assisting people by sending the last stored location to their trustee contacts when an emergency or disaster happens.
+@en    We made use of a LAMP server, developed some php code and run the code in a virtual box of the server of Santiago.
+@es    La idea en la que trabajamos era ayudar a gente que estuviese en apuros enviando la última localización almacenada a los contactos de confianza
+@es    cuando surgiese una emergencia o problema. Hicimos uso de un servidor de LAMP, desarrollamos un poco de código de php y pusimos en marcha una maquina
+@es    virtual en un servidor de Santiago.
 </p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jCi1_FQhhqQ?rel=0"
  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 
 <p>
-    Even though we got a functional demo, we would like to produce the next version of it. So in some months, we will reach the next stage and
-    I will update this entry, adding more information.
+@en    Even though we got a functional demo, we would like to produce the next version of it. So in some months, we will reach the next stage and
+@en    I will update this entry, adding more information.
+@es    Aunque tuvimos una demo funcional nos gustaría sacar una versión más avanzada de la misma. En unos pocos meses, pasaremos a la siguiente version
+@es    y actualizaré esta entrada añadiendo más información.
 </p>
 
 </body>
