--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+@en <html lang="en">
+@es <html lang="es">
 <head prefix="og: https://ogp.me/ns#">
 
     <!-- RDFa tags-->
     <meta property='og:title' content="Marcos Bernal España" />
     <meta property="og:site_name" content="Personal Website">
-    <meta property="og:description" content="Personal website. Sharing a small piece of me to the world." />
-
+@en    <meta property="og:description" content="Personal website. Sharing a small piece of me to the world." />
+@es    <meta property="og:description" content="Página web personal. Compartiendo un pedazo de mí con el mundo." />
 
     <title>
 @en      Personal Website of Marcos Bernal
@@ -15,7 +16,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Marcos Bernal España" />
-    <meta name="description" content="Personal website. Sharing a small piece of me to the world." />
+@en    <meta name="description" content="Personal website. Sharing a small piece of me to the world." />
+@es    <meta name="description" content="Página web personal. Compartiendo un pedazo de mí con el mundo." />
     <meta name="keywords"  content="personal website, CV, marcos, bernal, contact, email" />
     <meta name="Resource-type" content="Document" />
 
@@ -83,7 +85,7 @@
         </a>
         <a href="#AboutMe" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i>
 @en           AboutMe
-@es           Sobre mi
+@es           Acerca de mí
          </a>
         <a href="#Contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
 @en           Contact
@@ -110,7 +112,7 @@
             </a>
             <a href="#AboutMe"><i class="fa fa-user"></i>
 @en              About me
-@es              Sobre mi
+@es              Acerca de mí
             </a>
             <a href="#Contact"><i class="fa fa-envelope"></i>
 @en           Contact
